--- a/code_file.ipynb
+++ b/code_file.ipynb
@@ -791,6 +791,133 @@
     "    plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b141e80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e57f619",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train-test split completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train-Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(scaled_features, df['label'], test_size=0.2, random_state=42, stratify=df['label'])\n",
+    "print(\"Train-test split completed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a9cfcee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Performance:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00    419297\n",
+      "           1       1.00      1.00      1.00     25603\n",
+      "           2       0.99      1.00      0.99     18164\n",
+      "           3       0.88      0.68      0.76       391\n",
+      "           4       1.00      0.57      0.73         7\n",
+      "           5       0.71      0.92      0.80       294\n",
+      "           6       0.49      0.15      0.23       130\n",
+      "           7       1.00      0.00      0.00         4\n",
+      "           8       1.00      1.00      1.00      1187\n",
+      "           9       1.00      1.00      1.00       644\n",
+      "          10       1.00      0.99      1.00      1077\n",
+      "          11       0.99      0.99      0.99      1046\n",
+      "          12       1.00      1.00      1.00     34570\n",
+      "          13       1.00      0.99      0.99      2057\n",
+      "          14       1.00      1.00      1.00         2\n",
+      "\n",
+      "    accuracy                           1.00    504473\n",
+      "   macro avg       0.94      0.82      0.83    504473\n",
+      "weighted avg       1.00      1.00      1.00    504473\n",
+      "\n",
+      "AUC-ROC: 0.990\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 1: Random Forest Classifier\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "print(\"Random Forest Performance:\")\n",
+    "print(classification_report(y_test, y_pred_rf, zero_division=1))\n",
+    "\n",
+    "# Fix ROC-AUC Error for Multi-Class Classification\n",
+    "if len(np.unique(y_test)) > 2:\n",
+    "    roc_auc = roc_auc_score(y_test, rf_model.predict_proba(X_test), multi_class='ovr')\n",
+    "else:\n",
+    "    roc_auc = roc_auc_score(y_test, y_pred_rf)\n",
+    "print(f\"AUC-ROC: {roc_auc:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "18ff0867",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isolation Forest Performance:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.93      0.90    419297\n",
+      "           1       0.11      0.21      0.14     25603\n",
+      "           2       1.00      0.00      0.00     18164\n",
+      "           3       1.00      0.00      0.00       391\n",
+      "           4       1.00      0.00      0.00         7\n",
+      "           5       1.00      0.00      0.00       294\n",
+      "           6       1.00      0.00      0.00       130\n",
+      "           7       1.00      0.00      0.00         4\n",
+      "           8       1.00      0.00      0.00      1187\n",
+      "           9       1.00      0.00      0.00       644\n",
+      "          10       1.00      0.00      0.00      1077\n",
+      "          11       1.00      0.00      0.00      1046\n",
+      "          12       1.00      0.00      0.00     34570\n",
+      "          13       1.00      0.00      0.00      2057\n",
+      "          14       1.00      0.00      0.00         2\n",
+      "\n",
+      "    accuracy                           0.79    504473\n",
+      "   macro avg       0.93      0.08      0.07    504473\n",
+      "weighted avg       0.84      0.79      0.75    504473\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 2: Isolation Forest\n",
+    "iso_forest = IsolationForest(n_estimators=100, contamination=0.1, random_state=42, n_jobs=-1)\n",
+    "iso_forest.fit(X_train)\n",
+    "y_pred_if = iso_forest.predict(X_test)\n",
+    "y_pred_if = np.where(y_pred_if == -1, 1, 0)\n",
+    "print(\"Isolation Forest Performance:\")\n",
+    "print(classification_report(y_test, y_pred_if, zero_division=1))"
+   ]
   }
  ],
  "metadata": {
