Completed final evaluation steps and wrapped up analysis section

--- a/code_file.ipynb
+++ b/code_file.ipynb
@@ -791,6 +791,252 @@
     "    plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b141e80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e57f619",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train-test split completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train-Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(scaled_features, df['label'], test_size=0.2, random_state=42, stratify=df['label'])\n",
+    "print(\"Train-test split completed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a9cfcee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Performance:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00    419297\n",
+      "           1       1.00      1.00      1.00     25603\n",
+      "           2       0.99      1.00      0.99     18164\n",
+      "           3       0.88      0.68      0.76       391\n",
+      "           4       1.00      0.57      0.73         7\n",
+      "           5       0.71      0.92      0.80       294\n",
+      "           6       0.49      0.15      0.23       130\n",
+      "           7       1.00      0.00      0.00         4\n",
+      "           8       1.00      1.00      1.00      1187\n",
+      "           9       1.00      1.00      1.00       644\n",
+      "          10       1.00      0.99      1.00      1077\n",
+      "          11       0.99      0.99      0.99      1046\n",
+      "          12       1.00      1.00      1.00     34570\n",
+      "          13       1.00      0.99      0.99      2057\n",
+      "          14       1.00      1.00      1.00         2\n",
+      "\n",
+      "    accuracy                           1.00    504473\n",
+      "   macro avg       0.94      0.82      0.83    504473\n",
+      "weighted avg       1.00      1.00      1.00    504473\n",
+      "\n",
+      "AUC-ROC: 0.990\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 1: Random Forest Classifier\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "print(\"Random Forest Performance:\")\n",
+    "print(classification_report(y_test, y_pred_rf, zero_division=1))\n",
+    "\n",
+    "# Fix ROC-AUC Error for Multi-Class Classification\n",
+    "if len(np.unique(y_test)) > 2:\n",
+    "    roc_auc = roc_auc_score(y_test, rf_model.predict_proba(X_test), multi_class='ovr')\n",
+    "else:\n",
+    "    roc_auc = roc_auc_score(y_test, y_pred_rf)\n",
+    "print(f\"AUC-ROC: {roc_auc:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "18ff0867",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Isolation Forest Performance:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.93      0.90    419297\n",
+      "           1       0.11      0.21      0.14     25603\n",
+      "           2       1.00      0.00      0.00     18164\n",
+      "           3       1.00      0.00      0.00       391\n",
+      "           4       1.00      0.00      0.00         7\n",
+      "           5       1.00      0.00      0.00       294\n",
+      "           6       1.00      0.00      0.00       130\n",
+      "           7       1.00      0.00      0.00         4\n",
+      "           8       1.00      0.00      0.00      1187\n",
+      "           9       1.00      0.00      0.00       644\n",
+      "          10       1.00      0.00      0.00      1077\n",
+      "          11       1.00      0.00      0.00      1046\n",
+      "          12       1.00      0.00      0.00     34570\n",
+      "          13       1.00      0.00      0.00      2057\n",
+      "          14       1.00      0.00      0.00         2\n",
+      "\n",
+      "    accuracy                           0.79    504473\n",
+      "   macro avg       0.93      0.08      0.07    504473\n",
+      "weighted avg       0.84      0.79      0.75    504473\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 2: Isolation Forest\n",
+    "iso_forest = IsolationForest(n_estimators=100, contamination=0.1, random_state=42, n_jobs=-1)\n",
+    "iso_forest.fit(X_train)\n",
+    "y_pred_if = iso_forest.predict(X_test)\n",
+    "y_pred_if = np.where(y_pred_if == -1, 1, 0)\n",
+    "print(\"Isolation Forest Performance:\")\n",
+    "print(classification_report(y_test, y_pred_if, zero_division=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fa90d1d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "63060/63060 [==============================] - 124s 2ms/step - loss: 0.6823 - val_loss: 0.6491\n",
+      "Epoch 2/10\n",
+      "63060/63060 [==============================] - 122s 2ms/step - loss: 0.6798 - val_loss: 0.6488\n",
+      "Epoch 3/10\n",
+      "63060/63060 [==============================] - 121s 2ms/step - loss: 0.6795 - val_loss: 0.6487\n",
+      "Epoch 4/10\n",
+      "63060/63060 [==============================] - 112s 2ms/step - loss: 0.6794 - val_loss: 0.6487\n",
+      "Epoch 5/10\n",
+      "63060/63060 [==============================] - 114s 2ms/step - loss: 0.6794 - val_loss: 0.6485\n",
+      "Epoch 6/10\n",
+      "63060/63060 [==============================] - 112s 2ms/step - loss: 0.6793 - val_loss: 0.6486\n",
+      "Epoch 7/10\n",
+      "63060/63060 [==============================] - 113s 2ms/step - loss: 0.6793 - val_loss: 0.6488\n",
+      "Epoch 8/10\n",
+      "63060/63060 [==============================] - 112s 2ms/step - loss: 0.6793 - val_loss: 0.6485\n",
+      "Epoch 9/10\n",
+      "63060/63060 [==============================] - 113s 2ms/step - loss: 0.6794 - val_loss: 0.6486\n",
+      "Epoch 10/10\n",
+      "63060/63060 [==============================] - 112s 2ms/step - loss: 0.6794 - val_loss: 0.6488\n",
+      "Autoencoder Performance:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.96      0.90    419297\n",
+      "           1       0.12      0.12      0.12     25603\n",
+      "           2       1.00      0.00      0.00     18164\n",
+      "           3       1.00      0.00      0.00       391\n",
+      "           4       1.00      0.00      0.00         7\n",
+      "           5       1.00      0.00      0.00       294\n",
+      "           6       1.00      0.00      0.00       130\n",
+      "           7       1.00      0.00      0.00         4\n",
+      "           8       1.00      0.00      0.00      1187\n",
+      "           9       1.00      0.00      0.00       644\n",
+      "          10       1.00      0.00      0.00      1077\n",
+      "          11       1.00      0.00      0.00      1046\n",
+      "          12       1.00      0.00      0.00     34570\n",
+      "          13       1.00      0.00      0.00      2057\n",
+      "          14       1.00      0.00      0.00         2\n",
+      "\n",
+      "    accuracy                           0.81    504473\n",
+      "   macro avg       0.93      0.07      0.07    504473\n",
+      "weighted avg       0.82      0.81      0.75    504473\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 3: Autoencoder (Using GPU)\n",
+    "input_dim = X_train.shape[1]\n",
+    "autoencoder = Sequential([\n",
+    "    Dense(64, activation='relu', input_shape=(input_dim,)),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(16, activation='relu'),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(input_dim, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Use GPU for training\n",
+    "autoencoder.compile(optimizer=Adam(learning_rate=0.001), loss='mse')\n",
+    "autoencoder.fit(X_train, X_train, epochs=10, batch_size=32, validation_data=(X_test, X_test), verbose=1)\n",
+    "\n",
+    "X_test_pred = autoencoder.predict(X_test)\n",
+    "mse = np.mean(np.power(X_test - X_test_pred, 2), axis=1)\n",
+    "threshold = np.percentile(mse, 95)\n",
+    "y_pred_ae = (mse > threshold).astype(int)\n",
+    "print(\"Autoencoder Performance:\")\n",
+    "print(classification_report(y_test, y_pred_ae, zero_division=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f63cdfe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model Accuracy Summary:\n",
+      "              Model  Accuracy\n",
+      "0     Random Forest     0.999\n",
+      "0  Isolation Forest     0.785\n",
+      "0       Autoencoder     0.805\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a summary table with only accuracy for each model\n",
+    "def model_accuracy(y_true, y_pred, model_name):\n",
+    "    accuracy = np.mean(y_true == y_pred)\n",
+    "    return pd.DataFrame({\"Model\": [model_name], \"Accuracy\": [accuracy]})\n",
+    "\n",
+    "# Collect accuracy for each model\n",
+    "rf_accuracy = model_accuracy(y_test, y_pred_rf, \"Random Forest\")\n",
+    "iso_accuracy = model_accuracy(y_test, y_pred_if, \"Isolation Forest\")\n",
+    "ae_accuracy = model_accuracy(y_test, y_pred_ae, \"Autoencoder\")\n",
+    "\n",
+    "# Combine into a single table\n",
+    "accuracy_table = pd.concat([rf_accuracy, iso_accuracy, ae_accuracy])\n",
+    "\n",
+    "# Display the final accuracy table\n",
+    "print(\"\\nModel Accuracy Summary:\")\n",
+    "print(accuracy_table)\n"
+   ]
   }
  ],
  "metadata": {
